# SmartGenerator

./: DEVELOPMENT_PLAN.html  DEVELOPMENT_PLAN.md  MONITORING_ARCHITECTURE.md  ORCHESTRATOR_IMPROVEMENTS.md  SDI_FORMULA_DESCRIPTION.md  STRATEGY_CHECKS.md  USAGE_EXAMPLES.md  WEB_UI_ANNOTATIONS.md  pyproject.toml  run_test.py  run_web.py  t_orchestrator.py
configs/: break_point.yaml  canary.yaml  degradation.yaml  example.yaml  sla.yaml  spike.yaml  target.yaml
src/load_orchestrator/: __init__.py  cli.py  config.py  factory.py  models.py  orchestrator.py
src/load_orchestrator/adapters/: LocustAdapter.py
src/load_orchestrator/analytics/: analyzer.py  metrics_calculator.py
src/load_orchestrator/interfaces/: IAdapter.py
src/load_orchestrator/strategies/: __init__.py  base.py  break_point.py  canary.py  degradation_search.py  sla_validation.py  spike.py  step_load.py  target_rps.py  target_users.py
src/load_orchestrator/web/: __init__.py  api.py  server.py  websocket.py
src/load_orchestrator/web/static/: app.js  index.html  styles.css
tests/api/: api_client.py
tests/data/: urls.py
tests/data/models/: event_models.py  reminder_models.py  task_models.py  team_model.py  user_models.py
tests/endponits/: comments_endpoint.py  contacts_endpoint.py  events_enpoint.py  files_endpoint.py  main_endpoint.py  reactions_endpoint.py  reminders_endpoint.py  scheduling_endpoint.py  tasks_endpoint.py  teams_endpoint.py  users_endpoint.py
tests/load_tests/: locustfile.py  locustfile_demo.py  locustfile_httpbin.py
